[package]
name = "code_highlighter"
version = "0.2.0"
edition = "2021"
description = "Highlights code for printing"
repository = "https://github.com/yazaldefilimone/code_highlighter.rs"
license = "MIT"
keywords = ["console", "terminal", "error"]
categories = ["compilers", "text-processing"]

[dependencies]
